pxc/tests/test_11_foreach/fe_arr2.px
namespace fe_arr2;
import common -;


int z;
foreach (int i, string mutable s : z) { // error
}

